# driving-trip

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/agents/: travel-fact-checker.md
.claude/skills/build-pdf/: SKILL.md
.github/workflows/: deploy-pages.yml  deploy.yml
docs/: ARCHITECTURE.md  DEPLOY.md  SEO-A11Y.md  STYLEGUIDE.md
scripts/: __init__.py  amap_utils.py  build.py  deploy.sh  gen_assets.py  paths.py  render.py  seo.py  trip_data.py
src/: amap.html.tmpl  day.html.tmpl  home.html.tmpl  info.html.tmpl
src/css/: amap.css  base.css  components.css  layout.css  print.css  reset.css  tokens.css  weather.css
src/data/: info.json  trip.json  weather_cities.json
src/js/: date.js  theme.js  weather.js
src/partials/: footer.html  head.html  header-amap.html  header-day.html  header-home.html  header-info.html  module.html  skip-link.html  weather-block.html
tests/: test_render.py  test_sitemap.py
